--- a/client/src/components/PlayerDashboard/SolarSystemMap/SolarSystemMap.module.css
+++ b/client/src/components/PlayerDashboard/SolarSystemMap/SolarSystemMap.module.css
@@ -5,3 +5,20 @@
 .item:hover {
   background-color: var(--color-bg-lighter);
 }
+
+.highlighted {
+  outline: 1px solid var(--color-mfer-orange);
+  outline-offset: 1px;
+}
+
+.highlightedTraveling {
+  outline: 1px dashed var(--color-mfer-orange);
+  outline-offset: 3px;
+  animation: dash 1s linear infinite;
+}
+
+@keyframes dash {
+  to {
+    outline-offset: 0px;
+  }
+}
